values/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: check-permissions
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: efs-root
      mountPath: /mnt/efs
  volumes:
  - name: efs-root
    persistentVolumeClaim:
      claimName: efs-root-pvc
