values/postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: harbor
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  type: ClusterIP

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: harbor
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14  # Specify the version of PostgreSQL you want to use
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data  # Mount path for PostgreSQL data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
