values/expose-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlb-ingress-https-global
  namespace: ingress-nginx
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/load-balancer-type: "nlb"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: "alb"
  rules:
  - host: "*.plat-eng.com.br"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
